--- a/Esport/Style/style.css
+++ b/Esport/Style/style.css
@@ -11,6 +11,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     padding: 30px;
+    height: 40px;
     width: 100%;
     display: flex;
 
@@ -35,7 +36,7 @@ body {
 
 menu li a {
     color: white;
-    padding-left: 180px;
+    padding-left: 120px;
     display: block;
 }
 
@@ -56,6 +57,7 @@ menu li a {
     font-family: "Montserrat";
     font-size: 32px;
     font-weight: 100;
+    letter-spacing: .08em;
 }
 
 .hamburger {
@@ -90,7 +92,7 @@ menu li a {
 }
 
 
-@media screen and (min-width: 1124px) {
+@media screen and (min-width: 1024px) {
 
 
     .hamburger {
@@ -123,11 +125,13 @@ menu li a {
 
     .menu li a {
         color: white;
-        padding-left: 180px;
+        padding-left: 120px;
         display: block;
     }
 
     .logo {
+        padding-right: 30px;
+        width: 200px;
         height: 100%;
         display: table;
         float: left;
@@ -140,10 +144,8 @@ menu li a {
         font-family: "Montserrat";
         font-size: 32px;
         font-weight: 100;
+        letter-spacing: .08em;        
     }
 
-    .logo h1 span {
-        font-weight: 800;
-    }
 
 }
