--- a/Esport/Style/style.css
+++ b/Esport/Style/style.css
@@ -1,12 +1,14 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
+
 
 body {
     /* font-family: "Inter", sans-serif; */
@@ -73,14 +75,14 @@ menu li a {
 }
 
 .logo img {
-  position: relative;
-  top: 2px;
-  width: 100px;
-  height: 40px;
-  padding-top: 17px;
-  margin-left: -1px;
+    position: relative;
+    top: 2px;
+    width: 100px;
+    height: 40px;
+    padding-top: 17px;
+    margin-left: -1px;
 }
-  
+
 .hamburger {
     display: block;
     width: 30px;
@@ -103,10 +105,12 @@ menu li a {
     left: 0%;
 }
 
+
 .video {
-  position: absolute;
-  top: 38px;
-  z-index: -1;
+    position: absolute;
+    top: 53px;
+    z-index: -1;
+    width: 119%;
 }
 
 .menu--open li a {
@@ -115,16 +119,31 @@ menu li a {
     color: white;
     padding-top: 10px;
     text-decoration: none;
-    
+
 }
+
 /* 
 h1 {
   position: relative;
   top: 320px;
 } */
 
+.title {
+    position: relative;
+    text-align: center;
+    font-size: 80px;
+    top: -650px;
+    z-index: 1;
+    color: beige;
+}
 
-@media screen and (min-width: 498px) {
+.title span {
+    font-size: 50px;
+    text-decoration: none;
+}
+
+
+@media screen and (min-width: 1024px) {
 
 
     .hamburger {
@@ -176,7 +195,7 @@ h1 {
         font-family: "Montserrat";
         font-size: 32px;
         font-weight: 100;
-        letter-spacing: .08em;        
+        letter-spacing: .08em;
     }
 
 
