--- a/Esport/Style/style.css
+++ b/Esport/Style/style.css
@@ -22,7 +22,7 @@ body {
     transform: translateX(-50%);
     padding: 30px;
     height: 100px;
-    width: 100%;
+    width: 101%;
     display: flex;
 
 }
@@ -105,7 +105,7 @@ menu li a {
   position: absolute;
   top: 38px;
   z-index: -1;
-  width: 100%;
+  width: 101%;
 }
 
 .menu--open li a {
@@ -138,16 +138,16 @@ h1 {
         height: 100px;
         /* transform: translateX(-50%); */
         padding: 30px;
-        width: 100%;
+        width: 101%;
         display: flex;
     }
 
     .menu {
         position: relative;
         width: 100%;
-        left: 0;
+        left: -9vw;
         height: 0px;
-        top: -80px;
+        top: -53px;
     }
 
     .menu li {
@@ -158,6 +158,7 @@ h1 {
         color: white;
         padding-left: 120px;
         display: block;
+        text-decoration: none;
     }
 
     .logo {
