--- a/Esport/Style/style.css
+++ b/Esport/Style/style.css
@@ -1,18 +1,11 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
 /* ! BASE STYLE */
 
 body {
     font-family: 'Playfair Display', serif;
-    letter-spacing: .1em;
-    background-color: #0f1519;
+    background: #0f1519;
 }
+
+/* ! classi da aggiungere al codice html */
 
 a {
     text-decoration: none;
@@ -24,12 +17,12 @@ h3,
 h4,
 h5,
 p {
-    color: #f9f9f9;
+    color: white;
     padding-bottom: 30px;
 }
 
 .big-text {
-    font-size: 60px;
+    font-size: 70px;
 }
 
 .med-text {
@@ -37,501 +30,282 @@ p {
 }
 
 .normal-text {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .small-text {
-    font-size: 18px;
-    letter-spacing: 0.09vw;
+    font-size: 14px;
 }
 
 .intro-text {
     text-transform: uppercase;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 60px;
+    font-weight: 900;
 }
 
-/* ! ------------------------ HEADER ------------------------ */
-
-.header {
-    position: fixed;
-    background-color: #111111;
-    top: -23px;
-    left: 50%;
-    height: 119px;
-    transform: translateX(-50%);
-    padding: 30px;
-    width: 101%;
-    display: flex;
-}
-
-.menu {
-    position: absolute;
-    top: 0;
-    right: -100%;
-    height: 102vh;
-    padding-top: 80px;
-}
-
-.menu li {
-    display: block;
-    top: 30px;
-}
-
-menu li a {
-    color: #f9f9f9;
-    padding-left: 120px;
-    display: block;
-}
-
-.logo {
-    z-index: 1;
-    height: 100%;
-    display: table;
-    float: left;
-    position: relative;
-}
-
-.logo h1 {
-    z-index: 1;
-    color: #f9f9f9;
-    display: table-cell;
-    vertical-align: middle;
-    font-family: 'Playfair Display', serif;
-    font-size: 32px;
-    font-weight: 100;
-    top: 10px;
-    padding-left: 5px;
-}
-
-.logo img {
-    position: relative;
-    top: 2px;
-    width: 100px;
-    height: 40px;
-    padding-top: 17px;
-    margin-left: -1px;
-}
-
-.hamburger {
-    display: block;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: 52px;
-    right: 29px;
-}
-
-.hamburger span {
-    background: #f9f9f9;
-    height: 2.5px;
-    width: 90%;
-    display: block;
-    margin-bottom: 5.5px;
-}
-
-.menu--open {
-    z-index: 0;
-    left: -100%;
-    text-align: center;
-    padding-top: 115px;
-}
-
-.video {
-    position: relative;
-    top: 95px;
-    z-index: -1;
-    width: 100%;
-}
-
-/* 
-video {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-} */
-
-.menu--open li a {
-    z-index: 0;
+.button {
+    padding: 18px 28px;
+    background: #316bff;
+    color: white;
     display: inline-block;
-    color: #f9f9f9;
-    padding-top: 10px;
-    text-decoration: none;
-}
-
-.titolo {
-    position: sticky;
-}
-
-.titolo h1 {
-    text-align: center;
-}
-
-.titolo h1 img {
-    width: 190px;
+    /* ! per applicare il padding a tutto il link del bottone */
+    border-radius: 8px;
 }
 
 
 
 
-/* ! ------------------------ COROUSEL ------------------------ */
-
-.main-carousel {
-    border: 1px solid white;
-    padding: 40px 0;
-}
-
-.carousel-cell {
-    height: 350px;
-    width: 350px;
-    border: 1px solid white;
-}
-
-.divide {
-    width: 100vw;
-    padding: 0 30px;
-    margin: 0 auto;
-}
 
 
-/* ! ------------------------ MEDIA QUERIES ------------------------ */
 
-/* ! ------------------------ DESKTOP  ------------------------*/
 
-@media screen and (min-width: 1024px) {
+/* ! MOBILE FIRST */
 
-    /* ! ------------------------ HEADER ------------------------ */
+@media screen and (min-width: 268px) and (max-width:1024px) {
 
-    .titolo {
+    /* ! HEADER */
+
+    .logo__logo-right {
+        display: none;
+    }
+
+    .header {
+        display: flex;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding: 30px;
+        background: #111111;
+        z-index: 3;
+    }
+
+    .logo-left {
         z-index: 1;
+    }
+
+    .logo-left img {
+        width: 120px;
+        height: 30px;
+    }
+
+    .menu {
+        position: absolute;
+        top: 0;
+        right: -100%;
+        background: #111111;
+        height: 100vh;
+        width: 100%;
+        padding-top: 80px;
+        z-index: 0;
+    }
+
+    .menu li {
+        display: block;
+    }
+
+    .menu li a {
+        display: block;
+        padding: 15px;
+        color: white;
+        text-align: center;
+    }
+
+    .menu--open {
+        right: 0;
+    }
+
+
+
+    .hamburger {
+        display: block;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 40px;
+        right: 30px;
+        z-index: 11;
+    }
+
+    .hamburger span {
+        background: white;
+        height: 3px;
+        width: 100%;
+        display: block;
+        margin-bottom: 6px;
+    }
+
+
+    /* ! HERO */
+
+    .hero {
+        position: relative;
+        display: flex;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
+    }
+
+    .hero:after {
+        content: " ";
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #000;
+        opacity: 0.4;
+    }
+
+    .hero__content {
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto;
+        text-align: center;
+        z-index: 1;
+        position: relative;
+        padding-top: 4rem;
+    }
+
+    .hero__content__img {
+        position: relative;
+    }
+
+    #video-back {
+        position: absolute;
+        top: 0;
+        right: 0;
+        min-width: 100%;
+        min-height: 100%;
+    }
+
+
+}
+
+
+
+
+
+
+
+
+
+/* ! DESKTOP */
+
+@media screen and (min-width: 1025px) and (max-width: 3000px) {
+
+    /* ! HEADER */
+
+    .header {
+        z-index: 3;
+        display: flex;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding: 30px;
+        background: #111111;
+    }
+
+    .logo-left {}
+
+    .logo-left img {
+        width: 120px;
+        height: 30px;
+    }
+
+    .menu {
+
+        position: relative;
+        left: -33px;
+        width: 100%;
+        text-align: center;
+    }
+
+    .menu li {
+        display: inline-block;
+
+    }
+
+    .menu li a {
+        display: block;
+        padding: 15px 30px;
+        letter-spacing: 0.08vw;
+        color: white;
+
+    }
+
+    .logo__logo-right {
+
+        width: 40px;
+        height: 32px;
+        margin-top: 7.2px;
     }
 
     .hamburger {
         display: none;
     }
 
-    .header {
-        z-index: 10;
-        position: fixed;
-        background-color: #111111;
-        top: -23px;
-        height: 119px;
-        padding: 30px;
-        width: 101%;
-        display: flex;
-    }
 
-    .menu {
+    /* ! HERO */
+
+    .hero {
         position: relative;
+        height: 100vh;
+        display: flex;
         width: 100%;
-        left: -1.9vw;
-        height: 0px;
-        top: -58.5px;
-        text-align: center;
+        align-items: center;
+        overflow: hidden;
+
     }
 
-    .menu li {
-
-        display: inline-block;
-    }
-
-    .menu li a {
-        color: #f9f9f9;
-        left: 50%;
-        padding: 0 15px 0 15px;
+    .hero:after {
+        content: " ";
+        width: 100%;
+        height: 100%;
         display: block;
-        text-decoration: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #000;
+        opacity: 0.4;
     }
 
-    .logo {
-        z-index: 1;
-        height: 100%;
-        display: table;
-        float: left;
-        position: relative;
-    }
-
-    .logo h1 {
-        color: #f9f9f9;
-        display: table-cell;
-        vertical-align: middle;
-        font-family: "Montserrat";
-        font-size: 32px;
-        font-weight: 100;
-        letter-spacing: .08em;
-    }
-
-    .logo-valorant {
-        z-index: 1;
-        height: 100%;
-        display: table;
-        position: relative;
-    }
-
-    .logo-valorant img {
-        position: relative;
-        width: 39px;
-        height: 43px;
-        padding: 15px 0 1px 0;
-        margin-right: 1px;
-    }
-
-    .titolo {
-        top: 0px;
-        position: sticky;
-    }
-
-    .titolo h1 {
-        text-align: center;
-        font-size: 25px;
-    }
-
-    .titolo h1 img {
-        width: 290px;
-    }
-
-    .divide {
-        max-width: 1350px;
-        padding: 0 30px;
-        margin: 0 auto;
-    }
-
-    /* ! ------------------------ GRID ------------------------ */
-
-    .grid {
-        display: flex;
-        max-width: 1350px;
-        padding: 0 30px;
-        margin: 0 auto;
-    }
-
-    .grid .col {
+    .hero__content {
         width: 100%;
-    }
-
-
-    /* ! ------------------------ COROUSEL ------------------------ */
-
-    .main-carousel {
-        border: 1px solid white;
-        padding: 40px 0;
-    }
-
-    .carousel-cell {
-        height: 350px;
-        width: 350px;
-        border: 1px solid white;
-    }
-
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .menu {
-        position: absolute;
-        top: 0;
-        right: -100%;
-        height: 102vh;
-        padding-top: 80px;
-        background-color: #111111;
-    }
-
-    .menu--open {
-        z-index: 0;
-        left: -100%;
-        text-align: center;
-        padding-top: 115px;
-    }
-
-    .titolo {
-        z-index: -1;
-        position: sticky;
-    }
-
-    .titolo h1 {
-        position: relative;
-        top: 20px;
-        text-align: center;
-        font-size: 20px;
-    }
-
-    .titolo h1 img {
-        width: 230px;
-    }
-
-    .grid {
-        display: flex;
-        max-width: 1350px;
-        padding: 0 30px;
+        max-width: 400px;
         margin: 0 auto;
-    }
-
-    .grid .col {
-        width: 100%;
-    }
-
-}
-
-/* ! ------------------------ TABLET  ------------------------*/
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
-
-    .menu {
-        position: absolute;
-        top: 0;
-        right: -100%;
-        height: 102vh;
-        padding-top: 80px;
-        background-color: #111111;
-    }
-
-    .menu--open {
-        z-index: 0;
-        left: -100%;
         text-align: center;
-        padding-top: 115px;
-    }
-
-    .titolo {
-        z-index: -1;
-        position: sticky;
-    }
-
-    .titolo h1 {
-        text-align: center;
-    }
-
-    .titolo h1 img {
-        width: 140px;
-    }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
-
-    .menu {
-        position: absolute;
-        top: 0;
-        right: -100%;
-        height: 102vh;
-        padding-top: 80px;
-        background-color: #111111;
-    }
-
-    .menu--open {
-        z-index: 0;
-        left: -100%;
-        text-align: center;
-        padding-top: 115px;
-    }
-
-    .titolo {
-        z-index: -1;
-        position: sticky;
-    }
-
-    .titolo h1 {
+        z-index: 1;
         position: relative;
-        top: 30px;
-        text-align: center;
-        font-size: 16px;
+        padding-top: 5rem;
     }
 
-    .titolo h1 img {
-        width: 190px;
-    }
-}
-
-/* ! ------------------------ MOBILE ------------------------ */
-
-@media screen and (min-width: 320px) and (max-width: 424px) {
-
-    .menu {
+    #video-back {
         position: absolute;
         top: 0;
-        right: -100%;
-        height: 102vh;
-        padding-top: 80px;
-        background-color: #111111;
-    }
-
-    .menu--open {
+        left: 0;
+        min-width: 100%;
+        min-height: 100%;
         z-index: 0;
-        left: -100%;
-        text-align: center;
-        padding-top: 115px;
+
+
     }
 
-    .titolo {
-        z-index: -1;
-        position: sticky;
+    .hero__content__img {
+        width: 400px;
     }
-
-    .titolo h1 {
-        position: relative;
-        top: 45px;
-        text-align: center;
-        font-size: 13px;
-    }
-
-    .titolo h1 img {
-        width: 130px;
-    }
-}
-
-/* ! ------------------------ 0px -> 1023px ------------------------ */
-
-@media screen and (min-width: 0px) and (max-width: 1023px) {
-
-    .logo-valorant {
-        display: none;
-    }
-
 
 }
 
-@media screen and (min-width: 0px) and (max-width: 319px) {
 
 
-    .menu {
-        position: absolute;
-        top: 0;
-        right: -100%;
-        height: 102vh;
-        padding-top: 80px;
-        background-color: #111111;
-    }
 
-    .menu--open {
-        z-index: 0;
-        left: -100%;
-        text-align: center;
-        padding-top: 115px;
-    }
-
-    .titolo {
-        z-index: -1;
-        position: sticky;
-    }
-
-    .titolo h1 {
-        position: relative;
-        top: 53px;
-        text-align: center;
-        font-size: 10px;
-    }
-
-    .titolo h1 img {
-        width: 115px;
-    }
-
-    .logo-valorant {
-        display: none;
-    }
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
-
-/* ! HELPERS */
-
-.mt-1 {
-    margin-top: 100px
-}
-
-;
