--- a/Esport/Style/style.css
+++ b/Esport/Style/style.css
@@ -61,7 +61,7 @@ p {
 
 /* ! MOBILE FIRST */
 
-@media screen and (min-width: 10px) and (max-width:1024px) {
+/* @media screen and (min-width: 268px) and (max-width:1024px) { */
 
     /* ! HEADER */
 
@@ -181,7 +181,7 @@ p {
     }
 
 
-}
+/* } */
 
 
 
@@ -193,113 +193,13 @@ p {
 
 /* ! DESKTOP */
 
-@media screen and (min-width: 1025px) and (max-width: 3000px) {
+@media screen and (min-width: 1024px){
 
     /* ! HEADER */
 
-    .header {
-        z-index: 3;
-        display: flex;
-        width: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        padding: 30px;
-        background: #111111;
-    }
-
-    
-    .logo-left img {
-        width: 120px;
-        height: 30px;
-    }
-
-    .menu {
-
-        position: relative;
-        left: -33px;
-        width: 100%;
-        text-align: center;
-    }
-
-    .menu li {
-        display: inline-block;
-
-    }
-
-    .menu li a {
-        display: block;
-        padding: 15px 30px;
-        letter-spacing: 0.08vw;
-        color: white;
-
-    }
-
-    .logo__logo-right {
-
-        width: 40px;
-        height: 32px;
-        margin-top: 7.2px;
-    }
-
-    .hamburger {
-        display: none;
-    }
-
-
-    /* ! HERO */
-
-    .hero {
-        position: relative;
-        height: 100vh;
-        display: flex;
-        width: 100%;
-        align-items: center;
-        overflow: hidden;
-
-    }
-
-    .hero:after {
-        content: " ";
-        width: 100%;
-        height: 100%;
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: #000;
-        opacity: 0.4;
-    }
-
-    .hero__content {
-        width: 100%;
-        max-width: 400px;
-        margin: 0 auto;
-        text-align: center;
-        z-index: 1;
-        position: relative;
-        padding-top: 5rem;
-    }
-
-    #video-back {
-        position: absolute;
-        top: 0;
-        left: 0;
-        min-width: 100%;
-        min-height: 100%;
-        z-index: 0;
-
-
-    }
-
-    .hero__content__img {
-        width: 400px;
-    }
+  
 
 }
-
-
-
 
 
 
