--- a/Esport/Style/style.css
+++ b/Esport/Style/style.css
@@ -1,7 +1,7 @@
 /* ! BASE STYLE */
 
 body {
-    font-family: 'Playfair Display', serif;
+    font-family: 'VALORANT', sans-serif;
     background: #0f1519;
 }
 
@@ -44,145 +44,138 @@ p {
 }
 
 .button {
-    padding: 18px 28px;
+    display: inline-block; /* ! per applicare il padding a tutto il link del bottone */
     background: #316bff;
     color: white;
-    display: inline-block;
-    /* ! per applicare il padding a tutto il link del bottone */
+    padding: 18px 28px;
     border-radius: 8px;
+    
 }
 
 
 
+/* ! MOBILE */
 
 
 
+/* ! HEADER */
 
-
-/* ! MOBILE FIRST */
-
-@media screen and (min-width: 268px) and (max-width:1024px) {
-
-    /* ! HEADER */
-
-    .logo__logo-right {
-        display: none;
-    }
-
-    .header {
-        display: flex;
-        width: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        padding: 30px;
-        background: #111111;
-        z-index: 3;
-    }
-
-    .logo-left {
-        z-index: 1;
-    }
-
-    .logo-left img {
-        width: 120px;
-        height: 30px;
-    }
-
-    .menu {
-        position: absolute;
-        top: 0;
-        right: -100%;
-        background: #111111;
-        height: 100vh;
-        width: 100%;
-        padding-top: 80px;
-        z-index: 0;
-    }
-
-    .menu li {
-        display: block;
-    }
-
-    .menu li a {
-        display: block;
-        padding: 15px;
-        color: white;
-        text-align: center;
-    }
-
-    .menu--open {
-        right: 0;
-    }
-
-
-
-    .hamburger {
-        display: block;
-        width: 30px;
-        height: 30px;
-        position: absolute;
-        top: 40px;
-        right: 30px;
-        z-index: 11;
-    }
-
-    .hamburger span {
-        background: white;
-        height: 3px;
-        width: 100%;
-        display: block;
-        margin-bottom: 6px;
-    }
-
-
-    /* ! HERO */
-
-    .hero {
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: 100vh;
-        width: 100%;
-    }
-
-    .hero:after {
-        content: " ";
-        width: 100%;
-        height: 100%;
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: #000;
-        opacity: 0.4;
-    }
-
-    .hero__content {
-        width: 100%;
-        max-width: 400px;
-        margin: 0 auto;
-        text-align: center;
-        z-index: 1;
-        position: relative;
-        padding-top: 4rem;
-    }
-
-    .hero__content__img {
-        position: relative;
-    }
-
-    #video-back {
-        position: absolute;
-        top: 0;
-        right: 0;
-        min-width: 100%;
-        min-height: 100%;
-    }
-
-
+.logo-right img {
+    display: none;
 }
 
+.header {
+    display: flex;
+    position: fixed;
+    background: #111111;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 30px;
+    z-index: 3;
+}
+
+.logo-left {
+    z-index: 1;
+}
+
+.logo-left img {
+    width: 120px;
+    height: 30px;
+}
+
+.menu {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #111111;
+    top: 0;
+    right: -100%;
+    height: 100vh;
+    width: 100%;
+    z-index: 0;
+}
+
+.menu li {
+    display: block;
+    padding: 20px;
+}
+
+.menu li a {
+    display: block;
+    text-align: center;
+    color: white;
+}
+
+.menu--open {
+    right: 0;
+}
+
+
+
+.hamburger {
+    position: absolute;
+    display: block;
+    width: 30px;
+    height: 30px;
+    top: 40px;
+    right: 30px;
+    z-index: 11;
+}
+
+.hamburger span {
+    display: block;
+    background: white;
+    height: 3px;
+    width: 100%;
+    margin-bottom: 6px;
+}
+
+
+/* ! HERO */
+
+.hero {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.hero:after {
+    position: absolute;
+    display: block;
+    content: " ";
+    background: #000;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.4;
+}
+
+.hero__content {
+    position: relative;
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 400px;
+    z-index: 1;
+    padding-top: 4rem;
+}
+
+.hero__content__img {
+    position: relative;
+}
+
+#video-back {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
 
 
 
@@ -193,108 +186,54 @@ p {
 
 /* ! DESKTOP */
 
-@media screen and (min-width: 1025px) and (max-width: 3000px) {
+@media screen and (min-width: 1024px) {
 
     /* ! HEADER */
 
+
     .header {
-        z-index: 3;
+        position: absolute;
         display: flex;
-        width: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        padding: 30px;
-        background: #111111;
-    }
-
-    .logo-left {}
-
-    .logo-left img {
-        width: 120px;
-        height: 30px;
-    }
-
-    .menu {
-
-        position: relative;
-        left: -33px;
-        width: 100%;
-        text-align: center;
-    }
-
-    .menu li {
-        display: inline-block;
-
-    }
-
-    .menu li a {
-        display: block;
-        padding: 15px 30px;
-        letter-spacing: 0.08vw;
-        color: white;
-
-    }
-
-    .logo__logo-right {
-
-        width: 40px;
-        height: 32px;
-        margin-top: 7.2px;
+        align-items: baseline;
+        padding: 40px;
     }
 
     .hamburger {
         display: none;
     }
 
-
-    /* ! HERO */
-
-    .hero {
-        position: relative;
-        height: 100vh;
-        display: flex;
-        width: 100%;
-        align-items: center;
-        overflow: hidden;
-
-    }
-
-    .hero:after {
-        content: " ";
-        width: 100%;
-        height: 100%;
+    .logo-right img {
         display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: #000;
-        opacity: 0.4;
+        width: 45px;
+        height: 35px;
+        margin-left: 10px;
+        margin-right: -10px;
     }
 
-    .hero__content {
-        width: 100%;
-        max-width: 400px;
-        margin: 0 auto;
-        text-align: center;
-        z-index: 1;
+    .logo-left img { 
+        width: 120px;
+        height: 50px;
+    }
+
+    .menu {
         position: relative;
-        padding-top: 5rem;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+        right: 0;
+        height: 100%;
+        padding-top: 0;
+        margin-bottom: 10px;
     }
 
-    #video-back {
-        position: absolute;
-        top: 0;
-        left: 0;
-        min-width: 100%;
-        min-height: 100%;
-        z-index: 0;
-
-
+    .menu li {
+        padding: 0;
     }
 
-    .hero__content__img {
-        width: 400px;
+    .menu li a {
+        letter-spacing: 0.08vw;
+        font-size: 25px;
+        padding: 0;
     }
 
 }
