aggiunto css a classe paragrafi

--- a/Style/style.css
+++ b/Style/style.css
@@ -172,6 +172,11 @@ p {
     position: relative;
 }
 
+.paragrafi{
+    margin: 0 auto;
+    width: 60%;
+}
+
 #video-back {
     position: absolute;
     top: 0;
