--- a/Style/style.css
+++ b/Style/style.css
@@ -23,6 +23,12 @@ h6 {
 }
 
 
+footer{
+    text-align: center;
+    color: white;
+    padding: 40px;
+    background-color: rgb(0, 0, 0);
+}
 
 
 
