--- a/Style/style.css
+++ b/Style/style.css
@@ -106,6 +106,7 @@ p {
     width: 100%;
     z-index: 0;
     font-family: 'VALORANT', sans-serif;
+    transition: all 1s cubic-bezier(.215, .61, .355, 1);
 }
 
 .menu li {
