--- a/Style/style.css
+++ b/Style/style.css
@@ -52,7 +52,8 @@ p {
 }
 
 #esport {
-    color: white;
+    color: #ECECEC;
+    font-size: 25px;
 }
 
 
@@ -61,6 +62,8 @@ p {
 
 
 /* ! HEADER */
+
+.sidebar{display: none;}
 
 .logo-right img {
     display: none;
@@ -210,19 +213,7 @@ p {
 /* ! INTRO SECTION */
 
 
-.intro .sidebar {
-    background: yellow;
-    border: 1px solid yellow;
-    width: 300px;
-    height: 300px;
-}
-
-.sidebar {
-    display: none;
-}
-
 .container-presentation {
-    /* border: 1px solid red; */
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 40px;
@@ -232,13 +223,11 @@ p {
 
 
 .intro-title {
-
     width: 100%;
     text-align: center;
     opacity: 0;
     transform: scale(0.1);
     transition: all 1s cubic-bezier(.215, .61, .355, 1);
-
 }
 
 
@@ -251,10 +240,7 @@ p {
 }
 
 .boxed-section {
-    /* border: 1px solid cyan; */
     height: 100%;
-
-
 }
 
 
@@ -267,16 +253,49 @@ p {
 }
 
 .content-teaser-img img {
-
     width: 100%
 }
 
 
 
-.content-article {
+.artOne {
     opacity: 0;
     transform: scale(0.1);
     transition: all 1s cubic-bezier(.215, .61, .355, 1);
+}
+
+.artOne, .artTwo p{
+    line-height: 1.7;
+}
+
+.content-article h2 span {
+
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    font-size: 21px;
+    color: #ece8e1;
+}
+
+.content-piramid-img {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.content-piramid-img img {
+    width: 100%;
+}
+
+
+.content-ema-img {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 80px;
+}
+
+.content-ema-img img {
+    width: 100%;
 }
 
 .active {
@@ -285,48 +304,13 @@ p {
 }
 
 
-.content-article h2 span {
-    /* border: 2px solid green; */
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    font-size: 21px;
-    color: #ece8e1;
 
 
-}
-
-.content-piramid-img {
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-
-}
-
-.content-piramid-img img {
-    width: 100%;
-
-}
-
-
-.content-ema-img {
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.content-ema-img img {
-    width: 100%;
-}
-
-
-
-
-/* ! ARTICLE SECTION */
+/* ! ARTICLE SECTION LINKS */
 
 .news-title {
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 40px;
     margin-right: 20px;
 }
 
@@ -344,15 +328,74 @@ p {
     align-content: flex-start;
     justify-content: center;
     margin-left: 20px;
-    margin-right: 20px;
-    /* border: 1px solid red; */
+    margin-right: 20px;  
 }
 
 
 .container-articles img {
-    /* border: 1px solid red; */
     padding: 10px;
 }
+
+
+
+
+/* ! FULL ARTICLES  */
+
+.articles-section {
+    width: 100%;
+    height: 100%;
+    background: #ECECEC;   
+}
+
+.img-article {  
+    margin: 20px;
+    overflow: hidden;
+}
+
+.img-article img {
+    width: 100%;
+    margin-top: 80px;
+}
+
+.img-inside-article{
+    margin: 0;
+}
+
+.img-inside-article img{
+    width: 100%;
+}
+
+.article-three .img-inside-article:last-child{
+    padding-bottom: 100px;
+}
+
+
+.articles-section p {
+    color: #0f1923;
+    line-height: 1.7;
+    letter-spacing: 0.07vw;
+}
+
+.articles-section h2 {
+    font-family: "Tungsten Bold";
+    font-size: 50px;
+    color: #0f1923;
+}
+
+.articles-section h3 {
+    font-family: "Tungsten Bold";
+    color: #0f1923;
+    font-size: 20px;
+}
+
+.article-one, .article-two, .article-three {
+    margin: 20px;
+}
+
+
+
+
+
 
 
 
