--- a/Style/style.css
+++ b/Style/style.css
@@ -1,5 +1,7 @@
 /* ! BASE STYLE */
 
+
+
 body {
     position: absolute;
     font-size: 14px;
@@ -63,7 +65,9 @@ p {
 
 /* ! HEADER */
 
-.sidebar{display: none;}
+.sidebar {
+    display: none;
+}
 
 .logo-right img {
     display: none;
@@ -78,6 +82,12 @@ p {
     left: 0;
     padding: 30px;
     z-index: 3;
+    transition: all 1s cubic-bezier(.215, .61, .355, 1);
+}
+
+.hidden-header {
+    opacity: 1;
+    transform: scale(1);
 }
 
 .logo-left {
@@ -173,6 +183,11 @@ p {
     padding-top: 4rem;
 }
 
+.hero__content .intro-text,
+#esport {
+    transition: all 0.9s ease-in;
+}
+
 .hero__content h1 span:nth-child(1) {
     display: none;
 }
@@ -264,7 +279,8 @@ p {
     transition: all 1s cubic-bezier(.215, .61, .355, 1);
 }
 
-.artOne, .artTwo p{
+.artOne,
+.artTwo p {
     line-height: 1.7;
 }
 
@@ -315,8 +331,9 @@ p {
 }
 
 .news-title h2 {
-    font-family: "Tungsten Bold";
-    font-size: 70px;
+    font-family: 'Playfair Display', serif;
+    font-size: 60px;
+    font-weight: bold;
     color: #ece8e1;
     padding-bottom: 20px;
 }
@@ -328,7 +345,7 @@ p {
     align-content: flex-start;
     justify-content: center;
     margin-left: 20px;
-    margin-right: 20px;  
+    margin-right: 20px;
 }
 
 
@@ -344,30 +361,29 @@ p {
 .articles-section {
     width: 100%;
     height: 100%;
-    background: #ECECEC;   
+    background: #ECECEC;
+    margin-bottom: 80px;
 }
 
-.img-article {  
+.img-article {
     margin: 20px;
     overflow: hidden;
 }
 
 .img-article img {
     width: 100%;
-    margin-top: 80px;
+    margin-top: 40px;
 }
 
-.img-inside-article{
+.img-inside-article {
     margin: 0;
 }
 
-.img-inside-article img{
+.img-inside-article img {
     width: 100%;
 }
 
-.article-three .img-inside-article:last-child{
-    padding-bottom: 100px;
-}
+
 
 
 .articles-section p {
@@ -377,18 +393,23 @@ p {
 }
 
 .articles-section h2 {
-    font-family: "Tungsten Bold";
-    font-size: 50px;
+    font-family: 'Playfair Display', serif;
+    font-size: 30px;
+    font-weight: bold;
     color: #0f1923;
 }
 
 .articles-section h3 {
-    font-family: "Tungsten Bold";
+    font-family: 'Playfair Display', serif;
     color: #0f1923;
+    font-weight: bold;
     font-size: 20px;
 }
 
-.article-one, .article-two, .article-three {
+.article-one,
+.article-two,
+.article-three,
+.article-four {
     margin: 20px;
 }
 
