--- a/Style/tournaments.css
+++ b/Style/tournaments.css
@@ -35,6 +35,7 @@ p{
     width: 80%;
     padding-bottom: 3%;
     border-bottom: 0.5px solid grey ;
+    ;
 }
 
 .gamingtrophy{
@@ -46,12 +47,14 @@ p{
     background-color: #111;
     color: rgb(255, 103, 103);
     border-radius: 10px;
-    border: grey solid 0.3px;
+    border: rgb(255, 255, 255) solid 0.3px;
     padding: 20px;
+    color: white
 }
 
 .trophy-card:hover{
     background-color: rgb(25, 25, 25);
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.224);
 }
 
 
