--- a/Style/tournaments.css
+++ b/Style/tournaments.css
@@ -1,26 +1,28 @@
 /*tournament section*/
 h1,h2,h3,h4,h5{
     margin-bottom: 1cm;
+    font-size: larger;
 }
 
 p{
     line-height: 30px;
     color: rgb(179, 212, 220) !important;
+    font-size: larger;
 }
 
 .tournaments-header {
     text-align: center;
-    padding: 6%;
+    padding: 4%;
     font-family: 'VALORANT', sans-serif;
-    font-size: 35px;
+    font-size: 40px;
     color: rgb(255, 103, 103);
 }
 
 .tournaments-sub-header {
     text-align: center;
-    padding-top: 2%;
-    padding-bottom: 5%;
-    font-size: 20px;
+    padding-bottom: 2%;
+    margin-top: 40px;
+    font-size: 30px;
     font-family: 'VALORANT', sans-serif;
 }
 
@@ -55,7 +57,7 @@ p{
 
 .trophy-card:hover{
     background-color: rgb(25, 25, 25);
-    box-shadow: 0px 0px 10px 5px rgba(196, 232, 255, 0.457);
+    box-shadow: 0px 0px 10px 5px rgba(199, 250, 255, 0.418);
 }
 
 
